# amway-knowledge-vault

./: .gitignore  LICENSE  README.md  操作系统总控台.md  日志.md
00-灵感库（标记灵感）/: index.md  创作流程.md  操作系统总控台.md  (+3 more)
05-Skills（技能sop）/短视频方法库/内容质量检测类/content-risk-detector/: AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh-CN.md  SKILL.md  pyproject.toml  requirements.txt
05-Skills（技能sop）/短视频方法库/内容质量检测类/content-risk-detector/.claude/skills/ai-detector/: SKILL.md
05-Skills（技能sop）/短视频方法库/内容质量检测类/content-risk-detector/.github/workflows/: ci.yml
05-Skills（技能sop）/短视频方法库/内容质量检测类/content-risk-detector/.omx/: metrics.json
05-Skills（技能sop）/短视频方法库/内容质量检测类/content-risk-detector/.omx/logs/: notify-hook-2026-05-25.jsonl  tmux-hook-2026-05-25.jsonl  turns-2026-05-25.jsonl
05-Skills（技能sop）/短视频方法库/内容质量检测类/content-risk-detector/.omx/state/: hud-state.json  notify-hook-state.json  tmux-hook-state.json
05-Skills（技能sop）/短视频方法库/内容质量检测类/content-risk-detector/assets/templates/: report.md
05-Skills（技能sop）/短视频方法库/内容质量检测类/content-risk-detector/docs/: AGENT_PROMPT.md  BENCHMARK.md  HC3_EVALUATION.md
05-Skills（技能sop）/短视频方法库/内容质量检测类/content-risk-detector/examples/: sample_ai_like.txt  sample_human_like.txt
05-Skills（技能sop）/短视频方法库/内容质量检测类/content-risk-detector/references/: api-reference.md
05-Skills（技能sop）/短视频方法库/内容质量检测类/content-risk-detector/scripts/: benchmark.py  detect.py  evaluate_hc3.py  setup.sh
05-Skills（技能sop）/短视频方法库/内容质量检测类/content-risk-detector/src/aidetect/: cli.py  core.py
05-Skills（技能sop）/短视频方法库/内容质量检测类/content-risk-detector/tests/: test_cli.py  test_core.py
(+506 files in other folders)
