[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-detector-skill"
version = "0.1.0"
description = "A compact agent skill and CLI for evidence-based AI-generated text risk analysis."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Open Source Contributors" }]
keywords = ["ai-detection", "agent-skill", "claude-code", "codex", "text-analysis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Text Processing :: Linguistic",
]

[project.scripts]
ai-detect = "aidetect.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
